# pybrake-django-bug

./: README.md  manage.py  pyproject.toml  test_pybrake_bug.py
pybrake_django_bug/: asgi.py  settings.py  urls.py  wsgi.py
