[tool.poetry]
name = "pybrake-django-bug"
version = "0.1.0"
description = ""
authors = ["Chris Muthig <camuthig@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
pybrake = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
